--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ body {
   transform: translate(-50%, -100%);
   width: 8vmin;
   height: 8vmin;
-  background-color: #6bf0ff;
+  background-color: #f52f59;
   filter: blur(10vmin);
 }
 .flower__leaf {
@@ -141,7 +141,7 @@ body {
   height: 11vmin;
   border-radius: 51% 49% 47% 53%/44% 45% 55% 69%;
   background-color: #65e6cc;
-  background-image: linear-gradient(to top, #40bbab, #a7ffee);
+  background-image: linear-gradient(to top, #fa0764, #f74d8e);
   transform-origin: bottom center;
   opacity: 0.9;
   box-shadow: inset 0 0 2vmin rgba(255, 255, 255, 0.5);
@@ -239,13 +239,13 @@ body {
   bottom: 0vmin;
   width: 1vmin;
   height: 1vmin;
-  background-color: #fffb00;
+  background-color: #ff0095;
   border-radius: 50%;
   filter: blur(0.2vmin);
   animation: light-ans 4s linear infinite backwards;
 }
 .flower__light:nth-child(odd) {
-  background-color: #23f0ff;
+  background-color: #f00a19;
 }
 .flower__light--1 {
   left: -2vmin;
